@@ -1,4 +1,4 @@
 DIST openmsx-0.2.0-source.tar.gz 74966 RMD160 5dbc8df2edad473046185722f5fbe7d2a8cffa54 SHA1 2aa5f5ed85bed41a73d34263c2aafc57a592d9e4 SHA256 c65467700f3e8ab81d9af2bc7b65cd85d295033fe24326340566a6d66c3a6af4
-EBUILD openmsx-0.2.0.ebuild 761 RMD160 49bbc78160cee3755848ef74f37425e0db4ce54a SHA1 5b68d5ebd2f751b06b7cafab59ae88296d9063cc SHA256 a25449f23282e29b74208bd67b5e71288d4c69160a99460b2295425653b9502d
-MISC ChangeLog 259 RMD160 b9327d7d62a8fab487b360705255ac6a3d7bf504 SHA1 0b026e4efecb115f95f77c2a751fc03795e71c17 SHA256 599a6d7bd77dac8a28567b455ffa42adeaa130fb3bee6a5c61003effdf29483c
+EBUILD openmsx-0.2.0.ebuild 807 RMD160 2c0f7aad7ea8d2338ac6a19cd2a304a4ce7e44a2 SHA1 2dcfe603de9401676b18f3e5a638153618633b52 SHA256 02e6caf625bf55abe8958b2f0e9f118d2069657af83808ab8633b4f556eacf33
+MISC ChangeLog 368 RMD160 2514faf2735534becce0ee1b19c8b5592f3a826d SHA1 f6bada7759eb7b8436941822b7d336bab7adb8f7 SHA256 d30966b1d97afc13e642c44ccc431667ab56a0895e67d7db63b9fe75394bbd70
 MISC metadata.xml 257 RMD160 ba6f07183287fa5a1b502e8842902fcd248f193f SHA1 6a472f93b6951053d2cd5af007201e3f377241c7 SHA256 d3909e2fe98c97bf6a621462992bafd3d1a618867ed27b41d99c6acbbb72e462
