@@ -19,7 +19,8 @@ IUSE=""
 
 S="${WORKDIR}/${P}-source"
 
-DEPEND="app-text/unix2dos"
+DEPEND=">=games-simulation/openttd-1.0.0_beta1[alsa]
+	app-text/unix2dos"
 RDEPEND="${DEPEND}"
 
 src_compile() {
