@@ -1,5 +1,5 @@
 AUX openttd.initd 529 RMD160 ff9fdf7a787ae3d08ec4dbef1b1b37eee12d1ccd SHA1 f833206fc430c6e7afec76c39e97af0f7ec6578a SHA256 a16e5c64a073d0b7e7092bb906b7f064414870a8607bebce16b4b08cff7f4112
 DIST openttd-1.0.0-RC3-source.tar.bz2 5336573 RMD160 624cf35ebbba9e46a049a3bd51e539c1de6c0451 SHA1 8b5dd15fbd0bb981043b39698a601174f07118ff SHA256 06982a9319a21aad12222d3274fd3323a417f91d17406d2e3860f1460eacb965
-EBUILD openttd-1.0.0_rc3.ebuild 4008 RMD160 5e8b349eb0ee03503bbc354d7b1ab1555cf12d41 SHA1 c8f76fad524fee45aa6e6b30428b04fb82981297 SHA256 d8ac361fd48833bd8bbbcd71e34742a7ee5b31b0b77bfd158b2d93ef4d943721
-MISC ChangeLog 296 RMD160 b18ce2c4791cf6a3b6c3974978501969da20e7ef SHA1 8ebc45e0acc2512a8b31c4ffaaf5969e65229ffa SHA256 824f75432a106b9df3e74d1fd7fa333f64db2a2e751d7c66f2da45098f410001
-MISC metadata.xml 869 RMD160 1c4c8d6215f4354db0a7598a9bae546ddb3d77b1 SHA1 d66c8a5dd380b5edfc285eec14f7de4b0d158fbb SHA256 83804efebd90648522380afe3107a41597c65a9ee95fc25d14c0df72f0a4da1a
+EBUILD openttd-1.0.0_rc3.ebuild 4218 RMD160 7cd86f03d530f8456b972b2527cbb80212d37414 SHA1 d28bf76997150f44f687a409c4fa734443a76944 SHA256 d4d37632e526de54efdd297693b912cb78ea15d696d208cb29f10ff536943b93
+MISC ChangeLog 534 RMD160 7562ef7eb3c79bc93dbb5b46c8edf88b2df6004c SHA1 b5f831ee074543b08237b662c2e09fe3ad9b68d7 SHA256 cebbc4b3d4eac5dcca59a00b770541a2e79a76b226373b0e723ee0291c32dae3
+MISC metadata.xml 954 RMD160 b87d1d352611fd8c0647616ff98de97b3a6b27d2 SHA1 b0875a6fa788a6e67c80e620aaa6fff8204c74a3 SHA256 bd848d3176247da110f06ffd455e088ee15e575f09ef67be565fb5f205a87b03
